Update test to reflect current state.§